# wireframeDisplay

./: CMakeLists.txt  LICENSE  creating.py  mayaConfigure.bat  shapesDefinition.h  wireframeDisplay.cpp  wireframeDisplay.h
scripts/: creating.py
src/: PluginMain.cpp  updatedGoodLoc.cpp  wireframeDisplay.cpp  wireframeDisplay.h
